Fix docker-compose certbot service build

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
 
   certbot:
     build:
-      context: ./certbot/docker
+      context: ./dockerfiles/docker
     depends_on:
       - nginx
     volumes:
