Add ability to create multiple PHP-FPM containers
commit 2c2254dee70694b8d966245b076c8d12a28a007b
Author: Maksim Shkrebtan <mshkrebtan@gmail.com>
Date:   Sun Aug 21 01:20:36 2016 -0400

    Add an example project docker-compose.yml

commit 1dd4ada04df8f815a5039a3982dce128f3d741e9
Author: Maksim Shkrebtan <mshkrebtan@gmail.com>
Date:   Sat Aug 20 12:16:47 2016 -0400

    Separate Nginx and MariaDB services from PHP-FPM

commit 3cf04df79fbba9e9088d698e2482918825fd7136
Author: Maksim Shkrebtan <mshkrebtan@gmail.com>
Date:   Fri Aug 19 12:12:58 2016 -0400

    Add volumes to MariaDB service

commit be803eb95f662ae5ff6255b0895c9d75573f325a
Author: Maksim Shkrebtan <mshkrebtan@gmail.com>
Date:   Fri Aug 19 09:28:51 2016 -0400

    Add MariaDB service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,22 @@ version: '2'
 
 services:
   nginx:
-    build:
-      context: ./dockerfiles/nginx
+    image: nginx:stable
     ports:
       - 80:80
       - 443:443
+      - 127.0.0.1:8000:8000
     volumes:
-      - ./Volumes/var/www:/var/www
-      - ./Volumes/etc/nginx/conf.d:/etc/nginx/conf.d
-      - ./Volumes/etc/letsencrypt:/etc/letsencrypt
-      - ./Volumes/etc/nginx/ssl:/etc/nginx/ssl
-    tty: true
-    stdin_open: true
-    restart: always
+      - /var/www/html:/var/www/html
+      - /etc/nginx/conf.d:/etc/nginx/conf.d
+      - /etc/nginx/ssl:/ect/nginx/ssl
+      - /etc/letsencrypt:/etc/letsencrypt
+
+  mariadb:
+    image: mariadb
+    expose:
+      - 3306
+    volumes:
+      - /var/lib/mysql:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD
