Add a snippet for Let's Enrcypt ACME Challenge

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,12 @@ services:
       - 127.0.0.1:4443:4443
     volumes:
       - /var/www/html:/var/www/html
+      - /var/www/letsencrypt:/var/www/letsencrypt
       - /etc/nginx/conf.d:/etc/nginx/conf.d
+      - /etc/nginx/snippets:/etc/nginx/snippets
       - /etc/nginx/ssl:/etc/nginx/ssl
       - /etc/letsencrypt:/etc/letsencrypt
+    restart: always
 
   mariadb:
     image: mariadb
