Separate nginx and mariadb in different networks
I have replaced the deleted project example with a new one located in
the "web application" folder.

In docker-compose file one can specify a hostname, which is very
convenient.

I have set "restart: always" so that the containers now always restart.
This means that the container will always start on daemon startup,
regardless of the current state of the container.

The nginx and mariadb services now use different networks for better
isolation.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,9 @@ services:
       - /etc/nginx/http_auth:/etc/nginx/http_auth:ro
       # Let's Encrypt certificates and etc.
       - /etc/letsencrypt:/etc/letsencrypt:ro
+    hostname: nginx
+    networks:
+      - nginx
     restart: always
 
   mariadb:
@@ -31,3 +34,17 @@ services:
       - /var/lib/mysql:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD
+    hostname: mariadb
+    networks:
+      - mariadb
+    restart: always
+
+networks:
+  nginx:
+    ipam:
+      config:
+        - subnet: 192.168.0.0/29
+  mariadb:
+    ipam:
+      config:
+        - subnet: 192.168.1.0/29
